language/move-lang/tests/move_check/parser/use_with_module.exp
error: 

   ┌── tests/move_check/parser/use_with_module.move:2:1 ───
   │
 2 │ use 0x0::Module;
   │ ^^^ Invalid code unit. Expected 'address', 'module', or 'script'. Got 'use'
   │

