language/move-lang/tests/move_check/parser/use_with_module.move
// Top-level "use" are currently meaningless. The feature might be added some day
use 0x0::Module;
module M {
}
